<resources>
    <string name="app_name">Weather App</string>
    <string name="find_weather_predictions_in_your_city">Find weather predictions in your city</string>
    <string name="easy_steps_to_predict_weather_and_make_your_day_easier">Easy steps to predict weather and make your day easier</string>
    <string name="chance_of_rain">Chance of rain</string>
    <string name="pressure">Pressure</string>
    <string name="add_location">Add location</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="real_feel">Real feel</string>
    <string name="sea_level">Sea level</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="grind_level">Grind level</string>
    <string name="clouds">Clouds</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">%d\%%</string>
    <string name="air_quality">AQI %d</string>
    <string name="details">Details</string>
    <string name="empty_string"></string>
    <string name="wind_speed">%d km/h</string>
    <string name="wind_speed_imperial">%d mph</string>
    <string name="wind_gust">Wind Gust</string>
    <string name="formatted_float">%.2f</string>
    <string name="grind_level_value">%.0f</string>
    <string name="clouds_value">%.0f\%%</string>
    <string name="pressure_value">%.0f Pa</string>
    <string name="sea_level_value">%.0f m</string>
    <string name="text_view_search_locations">Search locations</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="max_min_temperature">%d°C / %d°C</string>
    <string name="max_min_temperature_imperial">%d°F / %d°F</string>
    <string name="celsius">°C</string>
    <string name="text_view_back">Back</string>
    <string name="text_view_search_location">Search location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_fav_location_yet">You don\'t have favorite locations yet.\nPlease add your favorite locations.</string>
    <string name="search_locations">Search locations</string>
    <string name="location_required_warning">Location is required to get the most out of the application. If no permission popup appears, please allow it in your phone settings.</string>
    <string name="visibility">Visibility</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="create_an_account">Create an account</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_login">Login</string>
    <string name="text_description">Easy steps to predict the weather and make your day easier</string>
    <string name="text_email_address">Email address</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="text_register">Register</string>
    <string name="pref_choose_temp_metrics">Choose temperature metrics</string>
    <string name="pref_dark_mode">Dark mode</string>
    <string name="pref_show_temp_in">Show temperature in</string>
    <string name="location">Location</string>
    <string name="sign_in">Sign in</string>
    <string name="fahrenheit">°F</string>
    <string name="favorite_locations">Favorite locations</string>
    <string name="edit">Edit</string>
    <string name="provide_your_current_location">Provide your current location</string>
    <string name="celsius_formatted">%d°C</string>
    <string name="fahrenheit_formatted">%d°F</string>
    <string name="mbar_formatted">%d mBar</string>
    <string name="mbar_formatted_float">%.0f mBar</string>
    <string name="m_formatted">%d m</string>
    <string name="no_search_results">No search results</string>
    <string name="on_successfully_added_to_db">Successfully added!</string>
    <string name="invalid_data">Invalid data</string>
    <string name="duplicate_location">This location already exists in favourites</string>
    <string name="logout">Log out</string>
    <string name="dialog_log_out_alert">Logout</string>
    <string name="dialog_log_out_message">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="login_error_message">Invalid email or password</string>
    <string name="back">Back</string>
    <string name="map">Map</string>
    <string name="current_location">Current location</string>
    <string name="add_new_favorite">Add new favorite</string>
    <string name="add_new_favorite_text">Do you wish to add %s as a new favorite location?</string>

    <string name="error_invalid_email">Invalid email address format</string>
    <string name="error_invalid_password">Password must be at least 6 characters long</string>
    <string name="error_empty_email_field">Please enter email address</string>
    <string name="error_empty_password_field">Please enter password</string>
    <string name="error_empty_confirm_password_field">Please confirm your password</string>
    <string name="error_passwords_did_not_match">Passwords did not match</string>

    <string-array name="pref_showTemperatureIn">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
</resources>