<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="@string/details"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.levi9internship.weatherapp.ui.DetailsFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="lat"
            app:argType="string" />
        <argument
            android:name="lon"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.levi9internship.weatherapp.ui.FavoriteFragment"
        android:label="@string/favorite_locations"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.levi9internship.weatherapp.ui.HomeFragment"
        android:label="Current Weather"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_locationAlertFragment"
            app:destination="@id/locationAlertFragment" />
        <action
            android:id="@+id/action_homeFragment_to_homeWithNoFavoriteFragment"
            app:destination="@id/homeWithNoFavoriteFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.levi9internship.weatherapp.ui.SearchFragment"
        android:label="@string/search_locations"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_searchFragment_to_map"
            app:destination="@id/map" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.levi9internship.weatherapp.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.levi9internship.weatherapp.ui.WelcomeFragment"
        android:label="fragment_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_welcomeFragment_to_locationAlertFragment"
            app:destination="@id/locationAlertFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeWithNoFavoriteFragment"
        android:name="com.levi9internship.weatherapp.ui.HomeWithNoFavoriteFragment"
        android:label="fragment_home_with_no_favorite"
        tools:layout="@layout/fragment_home_with_no_favorite">
        <action
            android:id="@+id/action_homeWithNoFavoriteFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/locationAlertFragment"
        android:name="com.levi9internship.weatherapp.ui.LocationAlertFragment"
        android:label="fragment_location_alert"
        tools:layout="@layout/fragment_location_alert">
        <action
            android:id="@+id/action_locationAlertFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_locationAlertFragment_to_homeWithNoFavoriteFragment"
            app:destination="@id/homeWithNoFavoriteFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.levi9internship.weatherapp.ui.RegisterFragment"
        android:label="@string/empty_string"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.levi9internship.weatherapp.ui.SignInFragment"
        android:label="@string/empty_string"
        tools:layout="@layout/fragment_sign_in" />
    <fragment
        android:id="@+id/map"
        android:name="com.levi9internship.weatherapp.ui.MapFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_map" />
</navigation>