<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dark_background_gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingStart="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_darkMode"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/text_darkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="22dp"
                    android:text="@string/pref_dark_mode"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_darkMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:theme="@style/WeatherSwitch"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_location"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/text_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="22dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:checked="true"
                    android:theme="@style/WeatherSwitch"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_showTemperatureIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="50dp">

                <TextView
                    android:id="@+id/text_showTemperatureIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineHeight="22dp"
                    android:text="@string/pref_show_temp_in"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:theme="@style/WeatherSpinner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:indeterminateDrawable="@drawable/progress_bar"
                    android:indeterminateDuration="@android:integer/config_longAnimTime"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/layout_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:foreground="@drawable/ripple">

                <TextView
                    android:id="@+id/text_signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:lineHeight="22dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_create_an_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:foreground="@drawable/ripple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:lineHeight="22px"
                    android:text="@string/create_an_account"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:foreground="@drawable/ripple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:lineHeight="22px"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha="0.5"
                    android:background="@color/gray"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>