<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.RegisterFragment">

    <LinearLayout
        android:id="@+id/linear_layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingBottom="30dp">

                <ProgressBar
                    android:id="@+id/progressBar_temperature"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="40dp"
                    android:translationZ="90dp"
                    android:indeterminateDrawable="@drawable/progress_bar"
                    android:indeterminateDuration="@android:integer/config_longAnimTime"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/image_view_logo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:importantForAccessibility="no"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="40dp"
                    android:text="@string/create_an_account"
                    android:textColor="@color/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="30dp"
                    android:text="@string/text_description"
                    android:textAlignment="center"
                    android:textColor="@color/textColorDescription"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_create_account" />

                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_description">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/search_view_and_button_background"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edit_text_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_outline_person_24"
                            android:drawablePadding="20dp"
                            android:hint="@string/text_email_address"
                            android:inputType="textEmailAddress"
                            android:maxLength="50"
                            android:padding="10dp"
                            android:saveEnabled="false"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/textColorTransparent80" />

                        <ImageView
                            android:id="@+id/image_view_email_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_baseline_clear_opacity_80"
                            android:visibility="invisible"
                            tools:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/search_view_and_button_background"
                        android:orientation="horizontal"
                        tools:visibility="visible">

                        <EditText
                            android:id="@+id/edit_text_password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="password"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_outline_lock_24"
                            android:drawablePadding="20dp"
                            android:hint="@string/text_password"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:padding="10dp"
                            android:saveEnabled="false"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/textColorTransparent80" />

                        <ImageView
                            android:id="@+id/image_view_password_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_baseline_clear_opacity_80"
                            android:visibility="invisible"
                            tools:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/search_view_and_button_background"
                        android:orientation="horizontal"
                        tools:visibility="visible">

                        <EditText
                            android:id="@+id/edit_text_confirm_password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:autofillHints="password"
                            android:background="@null"
                            android:drawableStart="@drawable/ic_outline_lock_24"
                            android:drawablePadding="20dp"
                            android:hint="@string/text_confirm_password"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:padding="10dp"
                            android:saveEnabled="false"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/textColorTransparent80" />

                        <ImageView
                            android:id="@+id/image_view_confirm_password_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingEnd="10dp"
                            android:src="@drawable/ic_baseline_clear_opacity_80"
                            android:visibility="invisible"
                            tools:visibility="visible" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/text_view_error_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@color/error_message"
                    app:layout_constraintBottom_toTopOf="@id/button_register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_layout"
                    tools:text="ERROR" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/search_view_and_button_background"
                    android:paddingHorizontal="20dp"
                    android:text="@string/text_register"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_error_message" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </LinearLayout>


</layout>